--- a/cocomapapp/templates/addRelation.html
+++ b/cocomapapp/templates/addRelation.html
@@ -3,7 +3,9 @@
 
     <script src="/static/selectize.js" type="text/javascript"></script>
     <script src="/static/typeahead.bundle.js" type="text/javascript"></script>
-    <script src="/static/addrelation.js" type="text/javascript"></script>
+    <!--<script src="/static/addrelation.js" type="text/javascript"></script>-->
+    <script src="/static/select2-403/dist/js/select2.js" type="text/javascript"></script>
+    <link href="/static/select2-403/dist/css/select2.css" rel="stylesheet"/>
     <link href="/static/topicAdd.css" rel="stylesheet"/>
 		<link href="/static/selectize.default.css" rel="stylesheet"/>
 
@@ -24,17 +26,17 @@
                         <table class="">
                           <tr>
                             <th><input type="text" id="relationships-name" class="form-control makeinline" placeholder="Relationship Name"></th>
-                            <th><input id="relates_to4" class="makeinline" placeholder="Name of a Topic" style="min-width:50px; text-align:left;"></th>
+                            <th><select id="relates_to4" class="makeinline" placeholder="Name of a Topic" style="min-width:50px; text-align:left;"></select></th>
                                                         <th><a id="rel_add1" onclick={document.getElementById('rel2').style.display='table-row';document.getElementById('rel_add1').style.display='none';}>Add another relation</a></th>
                           </tr>
                                                     <tr id="rel2" style="display: none;">
                                                         <th><input type="text" id="relationships-name2" class="form-control makeinline" placeholder="Relationship Name" ></th>
-                                                        <th><input id="relates_to5" class="makeinline" placeholder="Name of a Topic" style="min-width:50px; text-align:left; "></th>
+                                                        <th><select id="relates_to5" class="makeinline" placeholder="Name of a Topic" style="min-width:50px; text-align:left; "></select></th>
                                                         <th><a id="rel_add2" onclick={document.getElementById('rel3').style.display='table-row';document.getElementById('rel_add2').style.display='none';}>Add another relation</a></th>
                                                     </tr>
                                                     <tr id="rel3" style="display: none;">
                                                         <th><input type="text" id="relationships-name3" class="form-control makeinline" placeholder="Relationship Name"></th>
-                                                        <th><input id="relates_to6" class="makeinline" placeholder="Name of a Topic" style="min-width:50px; text-align:left;"></th>
+                                                        <th><select id="relates_to6" class="makeinline" placeholder="Name of a Topic" style="min-width:50px; text-align:left;"></select></th>
                                                     </tr>
                         </table>
                       </div>
@@ -43,6 +45,32 @@
 
           </div>
         </div>
+  <!--      <script type="text/javascript">
+          $('#relates_to4').select2();
+        </script>
+        <script type="text/javascript">
+          $('#relates_to5').select2();
+        </script>
+        <script type="text/javascript">
+          $('#relates_to6').select2();
+        </script>-->
+        <script type="text/javascript">
+        $.ajax({
+          url : "/cocomapapp/topicList/",
+          async:true,
+          dataType:"json"
+        }).fail( function() {
+          console.log("error");
+        }).done( function(data) {
+          $.each(data,function(i,value){
+            html = "<option>"+ value.name +"</option>";
+            $("#relates_to4").append(html);
+            $("#relates_to5").append(html);
+            $("#relates_to6").append(html);
+          });
+
+        });
+        </script>
         <div class="row">
           <div class="col-md-4"></div>
           <div class="col-md-4">
