--- a/cocomapapp/templates/addRelation.html
+++ b/cocomapapp/templates/addRelation.html
@@ -1,13 +1,10 @@
 {% extends 'base.html' %}
 {% block content %}
 
-    <script src="/static/selectize.js" type="text/javascript"></script>
-    <script src="/static/typeahead.bundle.js" type="text/javascript"></script>
-    <!--<script src="/static/addrelation.js" type="text/javascript"></script>-->
-    <script src="/static/select2-403/dist/js/select2.js" type="text/javascript"></script>
-    <link href="/static/select2-403/dist/css/select2.css" rel="stylesheet"/>
-    <link href="/static/topicAdd.css" rel="stylesheet"/>
-		<link href="/static/selectize.default.css" rel="stylesheet"/>
+<script src="/static/selectize.js" type="text/javascript"></script>
+<script src="/static/typeahead.bundle.js" type="text/javascript"></script>
+<link href="/static/selectize.default.css" rel="stylesheet"/>
+<script src="/static/addrelation.js" type="text/javascript"></script>
 
   <div class="col-sm-9 col-md-9 main">
 		<!-- title -->
@@ -24,21 +21,21 @@
                       <h2>Add Relationships</h2>
                       <div class="form-group newRelation">
                         <table class="">
-                          <tr>
-                            <th><input type="text" id="relationships-name" class="form-control makeinline" placeholder="Relationship Name"></th>
-                            <th><select id="relates_to4" class="makeinline" placeholder="Name of a Topic" style="min-width:50px; text-align:left;"></select></th>
+													<tr>
+														<th><input type="text" id="relationships-name" class="form-control makeinline" placeholder="Relationship Name"></th>
+														<th><input id="relates_to" class="makeinline" placeholder="Name of a Topic" style="min-width:600px; text-align:left;"></th>
                                                         <th><a id="rel_add1" onclick={document.getElementById('rel2').style.display='table-row';document.getElementById('rel_add1').style.display='none';}>Add another relation</a></th>
-                          </tr>
+													</tr>
                                                     <tr id="rel2" style="display: none;">
                                                         <th><input type="text" id="relationships-name2" class="form-control makeinline" placeholder="Relationship Name" ></th>
-                                                        <th><select id="relates_to5" class="makeinline" placeholder="Name of a Topic" style="min-width:50px; text-align:left; "></select></th>
+                                                        <th><input id="relates_to2" class="makeinline" placeholder="Name of a Topic" style="min-width:600px; text-align:left; display: none;"></th>
                                                         <th><a id="rel_add2" onclick={document.getElementById('rel3').style.display='table-row';document.getElementById('rel_add2').style.display='none';}>Add another relation</a></th>
                                                     </tr>
                                                     <tr id="rel3" style="display: none;">
                                                         <th><input type="text" id="relationships-name3" class="form-control makeinline" placeholder="Relationship Name"></th>
-                                                        <th><select id="relates_to6" class="makeinline" placeholder="Name of a Topic" style="min-width:50px; text-align:left;"></select></th>
+                                                        <th><input id="relates_to3" class="makeinline" placeholder="Name of a Topic" style="min-width:600px; text-align:left;"></th>
                                                     </tr>
-                        </table>
+												</table>
                       </div>
                   </div>
               </div>
