--- a/cocomapapp/templates/addRelation.html
+++ b/cocomapapp/templates/addRelation.html
@@ -5,6 +5,8 @@
 <script src="/static/typeahead.bundle.js" type="text/javascript"></script>
 <link href="/static/selectize.default.css" rel="stylesheet"/>
 <script src="/static/addrelation.js" type="text/javascript"></script>
+<script src="/static/recommend.js" type="text/javascript"></script>
+
 
   <div class="col-sm-9 col-md-9 main">
 		<!-- title -->
@@ -15,9 +17,11 @@
           <div class="col-md-10">
               <div class="img-circle" style="background-color: #DDA0DD;">
                   <div class="img-circle-content form-inline">
-
+                      <script type="text/javascript">
+                        var topic_id= {{ requested_topic.id }}
+                        console.log(topic_id);
+                      </script>
                       <h1> {{ requested_topic.name }} </h1>
-
                       <h2>Add Relationships</h2>
                       <div class="form-group newRelation">
                         <table class="">
@@ -42,37 +46,11 @@
 
           </div>
         </div>
-  <!--      <script type="text/javascript">
-          $('#relates_to4').select2();
-        </script>
-        <script type="text/javascript">
-          $('#relates_to5').select2();
-        </script>
-        <script type="text/javascript">
-          $('#relates_to6').select2();
-        </script>-->
-        <script type="text/javascript">
-        $.ajax({
-          url : "/cocomapapp/topicList/",
-          async:true,
-          dataType:"json"
-        }).fail( function() {
-          console.log("error");
-        }).done( function(data) {
-          $.each(data,function(i,value){
-            html = "<option>"+ value.name +"</option>";
-            $("#relates_to4").append(html);
-            $("#relates_to5").append(html);
-            $("#relates_to6").append(html);
-          });
-
-        });
-        </script>
         <div class="row">
           <div class="col-md-4"></div>
           <div class="col-md-4">
               <!-- <a href="/cocomapapp/topic/second" id="publish" style="width:100%" type="button" class="btn btn-primary">Publish</a> -->
-  						<button id="submit" style="width:100%" class="btn btn-primary">Add Relation</button>
+  						<button type="button" id="submit2" style="width:100%" onclick="" class="btn btn-primary">Add Relation</button>
           </div>
           <div class="col-md-4"></div>
           <div class="col-md-5"></div>
