--- a/cocomapapp/templates/addRelation.html
+++ b/cocomapapp/templates/addRelation.html
@@ -1,13 +1,13 @@
 {% extends 'base.html' %}
 {% block content %}
 
-    <script src="/static/selectize.js" type="text/javascript"></script>
+  <!--  <script src="/static/selectize.js" type="text/javascript"></script>-->
     <script src="/static/typeahead.bundle.js" type="text/javascript"></script>
-    <!--<script src="/static/addrelation.js" type="text/javascript"></script>-->
-    <script src="/static/select2-403/dist/js/select2.js" type="text/javascript"></script>
-    <link href="/static/select2-403/dist/css/select2.css" rel="stylesheet"/>
+    <script src="/static/addrelation.js" type="text/javascript"></script>
+    <script src="/static/select2-403/dist/js/select2.min.js" type="text/javascript"></script>
+    <link href="/static/select2-403/dist/css/select2.min.css" rel="stylesheet"/>
     <link href="/static/topicAdd.css" rel="stylesheet"/>
-		<link href="/static/selectize.default.css" rel="stylesheet"/>
+	<!--	<link href="/static/selectize.default.css" rel="stylesheet"/>-->
 
   <div class="col-sm-9 col-md-9 main">
 		<!-- title -->
@@ -26,7 +26,7 @@
                         <table class="">
                           <tr>
                             <th><input type="text" id="relationships-name" class="form-control makeinline" placeholder="Relationship Name"></th>
-                            <th><select id="relates_to4" class="makeinline" placeholder="Name of a Topic" style="min-width:50px; text-align:left;"></select></th>
+                            <th><select id="relates_to4" class="makeinline" ><option></option></select></th>
                                                         <th><a id="rel_add1" onclick={document.getElementById('rel2').style.display='table-row';document.getElementById('rel_add1').style.display='none';}>Add another relation</a></th>
                           </tr>
                                                     <tr id="rel2" style="display: none;">
@@ -45,8 +45,10 @@
 
           </div>
         </div>
-  <!--      <script type="text/javascript">
-          $('#relates_to4').select2();
+    <!--    <script type="text/javascript">
+          $('#relates_to4').select2({
+            placeholder: "Name of the Topic"
+          });
         </script>
         <script type="text/javascript">
           $('#relates_to5').select2();
@@ -54,7 +56,7 @@
         <script type="text/javascript">
           $('#relates_to6').select2();
         </script>-->
-        <script type="text/javascript">
+  <!--      <script type="text/javascript">
         $.ajax({
           url : "/cocomapapp/topicList/",
           async:true,
@@ -70,7 +72,7 @@
           });
 
         });
-        </script>
+      </script>-->
         <div class="row">
           <div class="col-md-4"></div>
           <div class="col-md-4">
